src/components/App.css
html body {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #776e65;
  background: #f9f4ee;
  font-family: "Passion One", cursive;
  touch-action: none;
  height: 100vh;
  margin: 0;
  padding: 0;
}

* {
  box-sizing: border-box;
}

#app-container {
  display: flex;
  position: relative;
  height: 100%;
  margin-bottom: 40%;
}

.app {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-flow: row wrap;
  flex: 1 100%;
  height: 100%;
  width: 500px;
  cursor: default;
}

@media screen and (max-width: 500px) {
  .app {
    width: 300px;
  }
}

